examples/test/testpolicy6816.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6816
  namespace: namespace348
spec:
  podSelector:
    matchLabels:
      key41: value43
      key43: value47
      key29: value13
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key32: value37
      podSelector:
        matchLabels:
          key0: value28
          key40: value32
